welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:10: error: value ToString is not a member of Int
                    ecritMessage(c.ToString)
                                   ^